argoworkflow/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: workflows
  name: workflows
spec:
  finalizers:
    - kubernetes
